tests/parsing/smtlib/mcil/errors/276_check-system_assumption_unopened.expected
File "tests/parsing/smtlib/mcil/errors/276_check-system_assumption_unopened.mcil", line 1, character 29-30:
1 | (check-system s1 :assumption _)
                                 ^
Error while parsing an assumption of a check-system command,
      read the reserved word '_',
      but expected an opening parenthesis.
